force-app/main/default/objects/CM_RoleDashboard__mdt/CM_RoleDashboard__mdt.object-meta.xml
<CustomObject>
    <description>Used to store role and dashboard names for component in home page</description>
    <label>CM_RoleDashboard</label>
    <pluralLabel>CM_RoleDashboards</pluralLabel>
</CustomObject>