force-app/main/default/objects/CM_RoleDashboard__mdt/fields/DashboardName__c.field-meta.xml
<CustomField>
    <fullName>DashboardName__c</fullName>
    <label>Dashboard Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>