force-app/main/default/objects/CM_RoleDashboard__mdt/fields/IncludeSubordinates__c.field-meta.xml
<CustomField>
    <fullName>IncludeSubordinates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Subordinates</label>
    <type>Checkbox</type>
</CustomField>