force-app/main/default/objects/CM_RoleDashboard__mdt/listViews/AllRoles.listView-meta.xml
<ListView>
    <fullName>AllRoles</fullName>
    <columns>RoleName__c</columns>
    <columns>DashboardName__c</columns>
    <columns>IncludeSubordinates__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All Roles</label>
    <language>en_US</language>
</ListView>